Update Home, Clients and Events pages

--- a/clients.html
+++ b/clients.html
@@ -116,6 +116,7 @@ permalink: /clients/
                             <ul>
                                 <li>Full website development</li>
                                 <li>Google Analytics integration</li>
+				<li>Google Search Console submission</li>
                             </ul>
                             <div class="padding-btn">
                                 <a class ="btn-secondary" href="https://pathways21.com" 
@@ -174,6 +175,7 @@ permalink: /clients/
                                 <li>Full website development</li>
                                 <li>Search engine optimisation</li>
                                 <li>MailerLite integration</li>
+				<li>Google Search Console submission</li>
                             </ul>
                             <div class="padding-btn">
                                 <a class ="btn-secondary" href="https://www.audreyzcoaching.com"
@@ -193,6 +195,8 @@ permalink: /clients/
                             <ul>
                                 <li>Full website development</li>
                                 <li>Custom domain setup</li>
+				<li>Google Analytics integration</li>
+				<li>Google Search Console submission</li>
                             </ul>              
                             <div class="padding-btn">
                                 <a class ="btn-secondary" href="https://www.bluehorizonlnw.com"
@@ -212,6 +216,7 @@ permalink: /clients/
                             <ul>
                                 <li>Search engine optimisation</li>
                                 <li>Design improvements</li>
+				<li>Google Search Console submission</li>
                             </ul>
                             <div class="padding-btn">
                                 <a class ="btn-secondary" href="https://www.taniapaigedesigns.org"
@@ -233,6 +238,7 @@ permalink: /clients/
                                 <li>Theme customisations</li>
                                 <li>Search engine optimisation</li>
                                 <li>Blog publishing</li>
+				<li>Google Search Console submission</li>
                             </ul>
                             <div class="padding-btn">
                                 <a class ="btn-secondary" href="https://newhawcommunitycentre.co.uk"
@@ -276,9 +282,9 @@ permalink: /clients/
                             <ul>
                                 <li>Website audit</li>
                                 <li>Full website development</li>
-                                <li>Search engine optimisation</li>
                                 <li>Google Analytics integration</li>
                                 <li>Mailchimp integration</li>
+				<li>Google Search Console submission</li>
                             </ul>   
                             <div class="padding-btn">
                                 <a class ="btn-secondary" href="https://future-communities.org.uk"
@@ -297,7 +303,7 @@ permalink: /clients/
                             <h2>Wardell's Wardrobe (Shopify)</h2>
                             <ul>
                                 <li>Colour swatches</li>
-                                <li>Search engine optimisation</li>
+				<li>Google Search Console submission</li>
                             </ul>  
                             <div class="padding-btn">
                                 <a class ="btn-secondary" href="https://wardellswardrobe.com"
@@ -358,6 +364,7 @@ permalink: /clients/
                                 <li>Theme customisations</li>
                                 <li>Image gallery carousel with Slick</li>
                                 <li>Chatbot setup (Tidio)</li>
+				<li>Google Search Console submission</li>
                             </ul>          
                             <div class="padding-btn">
                                 <a class ="btn-secondary" href="https://kyosk.co"
@@ -385,7 +392,7 @@ permalink: /clients/
                     </div>
                 </div>
 
-                <p>Find out how I can help your business grow further today.</p>
+                <p style="text-align: center">Find out how I can help your business grow further today.</p>
 
                 <div class="padding-bottom padding-top center">
                     <a class="btn-primary" href="https://sybilmayard.tech/contact">Contact Me</a>
