--- a/events.html
+++ b/events.html
@@ -114,39 +114,7 @@ permalink: /events/
                             alt="E-commerce">
                     </div>
                     <div class="col-8">
-                        <h2>An Introduction to Building a Business Using Shopify</h2>
-                        <p>When: Thursday 21st January 2021 at 2pm GMT</p>
-
-                        <p>Where: Zoom (online)</p>
-
-                        <p>Cost: Free</p>
-
-                        <p>This free event will be hosted by two experienced facilitators, Gary Parker, BA (Hons) Social 
-                            Science - who will present the overview and introduction and Sybil Mayard, MSc Computer 
-                            Science - who will facilitate the main technical aspects. Both will answer questions after 
-                            the presentation.</p>
-
-                        <p>This workshop will teach you the basics of:</p>
-                        <ul>
-                            <li>How to set up a Shopify account</li>
-                            <li>How to set up an online store</li>
-                            <li>How to grow a new or existing business</li>
-                            <li>Hints and tips to make the most of your online business</li>
-                            <li>Information, advice and guidance on the next steps</li>
-                       </ul>
-                        <div class="padding-top">
-                            <a class="btn-cnt" href="https://www.eventbrite.co.uk/e/shopify-an-introduction-to-using-it-to-build-an-online-store-free-tickets-131349416641"                           
-                                target="_blank" rel="noopener noreferrer">Register Now</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-4">
-                        <img src="https://sybilmayard.tech/images/E-commerce-online-shopping-laptop-credit-cards-and-smartphone-on-desk.jpg" 
-                            alt="E-commerce">
-                    </div>
-                    <div class="col-8">
-                        <h2>Using Shopify to Build an Online Store for Your Organisation - Stage 2</h2>
+                        <h2>Using Shopify to Build an Online Store for Your Organisation - Live</h2>
                         <p>When: Thursday 4th February 2021 at 2pm GMT</p>
 
                         <p>Where: Zoom (online)</p>
@@ -170,8 +138,7 @@ permalink: /events/
                        <p>After attending this webinar, you will receive the PowerPoint slides and the 
                            intro video from our video course <em>Building a Business with Shopify 2020/21.</em></p>
 
-                        <p>Additional packages and resources are available; please email us on 
-                            <a href="mailto:info@cntassociates.com">info@cntassociates.com</a> for details.</p>
+                        <p>Additional packages and resources are available; please email <a href="mailto:info@cntassociates.com">info@cntassociates.com</a> for details.</p>
                         <div class="padding-top">
                             <a class="btn-cnt" href="https://www.eventbrite.co.uk/e/using-shopify-to-build-an-online-store-for-your-organisation-stage-2-tickets-131171490459" 
                             target="_blank" rel="noopener noreferrer">Register Now</a>
