--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@ permalink: /
         </div>
         <div class="events section">
             <div class="container-1000">
-                <h2 class="center">NEW! Building a Business with Shopify 2020/21</h2>
+                <h2 class="center">NEW! Building a Business Using Shopify</h2>
                 <hr>
                 <div class="row">
                     <div class="col-6">                        
@@ -179,7 +179,7 @@ permalink: /
                     </div>
                     <div class="col-6">                       
                         <p class="padding-bottom">Sybiltech and CNT Associates have partnered together to produce a new webinar
-                                teaching you how to start your e-commerce business using Shopify.</p>
+                                series teaching you how to start your e-commerce business using Shopify.</p>
                         <a class="btn-cnt" href="https://sybilmayard.tech/events">View Events</a>          
                     </div>
                 </div>
